# py_iec_61162

./: .gitignore  README.md  pyproject.toml
src/iec_61162/part_1/: sentences.py
src/iec_61162/part_450/: messages.py
