[project]
name = "iec_61162"
version = "0.2.0"
description = "A python package that implements parts of the IEC 61162 series of standards, 'Maritime Navigation and Radiocommunication Equipment and Systems - Digital Interfaces'."
authors = [
    {name = "Jan Safar", email = "jan.safar@gla-rad.org"},
]
dependencies = [
    "bitstring>=4.1.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "\u0016Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = "true"

[tool.pdm.dev-dependencies]
spyder = [
    "spyder-kernels==2.5.*",
]
testing = [
    "pytest>=7.4.4",
]
